# Stationery

./: .gitignore  CC0-1.0  Makefile.am  README.md  configure.ac
Documents/: Makefile.am
Documents/Blank/: Makefile.am  content.xml  manifest.rdf  meta.xml  styles.xml
